--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <title>SVG to ZingChart</title>
     <script src="https://cdn.zingchart.com/zingchart.min.js"></script>
-
 </head>
 <body>
+    <object type="image/svg+xml" id="sample-svg" data="pokemap-SIMPLE.svg"></object>
+    <script src="bezier.js"></script>
     <script src="svg-to-zing.js"></script>
+    <div id="sample">
+
+    </div>
 </body>
 </html>
