Fixed polygon generation, working on lines & other shapes

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="main.css">
     <meta charset="UTF-8">
     <title>SVG to ZingChart</title>
     <script src="https://cdn.zingchart.com/zingchart.min.js"></script>
@@ -8,9 +9,9 @@
 <body>
     <object type="image/svg+xml" id="sample-svg" data="pokemap-SIMPLE.svg"></object>
     <script src="bezier.js"></script>
-    <script src="svg-to-zing.js"></script>
     <div id="sample">
 
     </div>
+    <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
 </body>
 </html>
