--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
     <script src="https://cdn.zingchart.com/zingchart.min.js"></script>
 </head>
 <body>
-    <object type="image/svg+xml" id="sample-svg" data="pokemap-SIMPLE.svg"></object>
     <script src="bezier.js"></script>
-    <div id="sample">
+    <div id="LEFT">
+        <div id="MAP">
+            <div id="CHARTDIV">
 
+            </div>
+        </div>
+    </div>
+    <div id="FOOTER">
+        <select id="Select-Region"></select>
+        <input type="file" id="file-input" />
+
+    </div>
+    <div id="RIGHT">
+        <div id = "pokediv"></div>
     </div>
     <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
 </body>
