Visualization of route data is good to go.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,24 @@
     <div id="FOOTER">
         <div class="alignMiddle">
             <div id="bottomElts">
+                <div id="center_pokemon_image">
+                    <div id = "encloseImage">
+
+                        <div id="pokemon_header">
+                            <p id="pokemon_header_title"></p>
+                            <div id="pokemon_header_types"></div>
+                        </div>
+                        <img id="pokemon_image" src="holder.png" />
+                    </div>
+                    <div id="secondary_div">
+                        <div id="radar">
+
+                        </div>
+                        <div id="chord">
+
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
