Maps on maps on maps on maps

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                             <option selected disabled>Select Region</option>
                             <option name="hoenn">Hoenn</option>
                             <option name="kalos">Kalos</option>
+                            <option name="sinnoh">Sinnoh</option>
+                            <option name="johto">Johto</option>
                         </select>
                     </form>
                     <div id ="chartForm">
