--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" type="text/css" href="main.css">
     <meta charset="UTF-8">
     <title>SVG to ZingChart</title>
-    <script src="https://cdn.zingchart.com/zingchart.min.js"></script>
+    <script src="https://demos-stage.zingchart.com/zingchart/zingchart.min.js"></script>
+    <script src="https://demos-stage.zingchart.com/zingchart/modules/zingchart-chord.min.js"></script>
 </head>
 <body>
     <script src="bezier.js"></script>
