Stats progression visualization working

--- a/index.html
+++ b/index.html
@@ -84,23 +84,18 @@
                         <img id="pokemon_image" src="UI_images/holder.png" />
                     </div>
                     <div id="secondary_div">
-                        <div id="charts">
+                        <div id="stats_div">
                             <div id="radar">
 
                             </div>
 
-                            <div id="chord">
+                            <div id="stats_progression">
 
                             </div>
                         </div>
-                        <div id="description">
-                            <div>
-                                <div id="IV_select">
-                                    <p id="IV_select_header">Select IV</p>
-                                </div>
-                                <div id="stats_progression">
+                        <div id="cord_div">
+                            <div id="chord">
 
-                                </div>
                             </div>
                         </div>
                     </div>
