--- a/index.html
+++ b/index.html
@@ -84,18 +84,76 @@
                         <img id="pokemon_image" src="UI_images/holder.png" />
                     </div>
                     <div id="secondary_div">
+                        <div id="cord_div">
+                            <div id="chord">
+
+                            </div>
+                        </div>
                         <div id="stats_div">
                             <div id="radar">
 
                             </div>
-
-                            <div id="stats_progression">
-
-                            </div>
-                        </div>
-                        <div id="cord_div">
-                            <div id="chord">
-
+                            <div id="progression">
+                                <div id="stats_progression">
+                                </div>
+                                <div id="adjustIV_div">
+                                    <div id="clip_stats">
+                                        <div id="nature_div">
+                                            <div id="nature_header"><p>Select Nature:</p></div>
+                                            <select id="nature" size="22" >
+                                                <option selected value="[null,null]">Hardy</option>
+                                                <option value="2,3">Lonely</option>
+                                                <option value="2,6">Brave</option>
+                                                <option value="2,4">Adamant</option>
+                                                <option value="2,5">Naughty</option>
+                                                <option value="3,2">Bold</option>
+                                                <option value="null,null">Docile</option>
+                                                <option value="3,6">Relaxed</option>
+                                                <option value="3,4">Impish</option>
+                                                <option value="3,5">Lax</option>
+                                                <option value="6,2">Timid</option>
+                                                <option value="6,3">Hasty</option>
+                                                <option value="null,null">Serious</option>
+                                                <option value="6,4">Jolly</option>
+                                                <option value="6,5">Naive</option>
+                                                <option value="4,2">Modest</option>
+                                                <option value="4,3">Mild</option>
+                                                <option value="4,6">Quiet</option>
+                                                <option value="null,null">Bashful</option>
+                                                <option value="4,5">Rash</option>
+                                                <option value="5,2">Calm</option>
+                                                <option value="5,3">Gentle</option>
+                                                <option value="5,6">Sassy</option>
+                                                <option value="5,4">Careful</option>
+                                                <option value="null,null">Quirky</option>
+                                            </select>
+                                        </div>
+                                        <div class="vert_slider" id="HP_div">
+                                            <div class="statHeader" id="HP_header"><p>HP IV</p></div>
+                                            <input type="range" id="HP" class="stats_slider round" max="31" min="0" value="15">
+                                        </div>
+                                        <div class="vert_slider" id="attack_div">
+                                            <div class="statHeader" id="attack_header"><p>Atk IV</p></div>
+                                            <input type="range" id="attack" class="stats_slider round" max="31" min="0" value="15">
+                                        </div>
+                                        <div class="vert_slider" id="defense_div">
+                                            <div class="statHeader" id="defense_header"><p>Def IV</p></div>
+                                            <input type="range" id="defense" class="stats_slider round" max="31" min="0" value="15">
+                                        </div>
+                                        <div class="vert_slider" id="s_attack_div">
+                                            <div class="statHeader" id="s_attack_header"><p>Sp.Atk IV</p></div>
+                                            <input type="range" id="s_attack" class="stats_slider round" max="31" min="0" value="15">
+                                        </div>
+                                        <div class="vert_slider" id="s_defense_div">
+                                            <div class="statHeader" id="s_defense_header"><p>Sp.Def IV</p></div>
+                                            <input type="range" id="s_defense" class="stats_slider round" max="31" min="0" value="15">
+                                        </div>
+                                        <div class="vert_slider" id="speed_div">
+                                            <div class="statHeader" id="speed_header"><p>Speed IV</p></div>
+                                            <input type="range" id="speed" class="stats_slider round" max="31" min="0" value="15">
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
