--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                 <div id="adjustIV_div">
                                     <div id="clip_stats">
                                         <div id="nature_div">
-                                            <div id="nature_header"><p>Select Nature:</p></div>
+                                            <div id="nature_header"><p>Nature:</p></div>
                                             <select id="nature" size="22" >
                                                 <option selected value="[null,null]">Hardy</option>
                                                 <option value="2,3">Lonely</option>
@@ -127,30 +127,24 @@
                                                 <option value="5,4">Careful</option>
                                                 <option value="null,null">Quirky</option>
                                             </select>
-                                        </div>
-                                        <div class="vert_slider" id="HP_div">
+                                        </div><div class="vert_slider" id="HP_div">
                                             <div class="statHeader" id="HP_header"><p>HP IV</p></div>
-                                            <input type="range" id="HP" class="stats_slider round" max="31" min="0" value="15">
-                                        </div>
-                                        <div class="vert_slider" id="attack_div">
+                                            <input type="range" id="HP" class="stats_slider round" orient="vertical" max="31" min="0" value="15">
+                                        </div><div class="vert_slider" id="attack_div" >
                                             <div class="statHeader" id="attack_header"><p>Atk IV</p></div>
-                                            <input type="range" id="attack" class="stats_slider round" max="31" min="0" value="15">
-                                        </div>
-                                        <div class="vert_slider" id="defense_div">
+                                            <input type="range" id="attack" class="stats_slider round" orient="vertical" max="31" min="0" value="15">
+                                        </div><div class="vert_slider" id="defense_div">
                                             <div class="statHeader" id="defense_header"><p>Def IV</p></div>
-                                            <input type="range" id="defense" class="stats_slider round" max="31" min="0" value="15">
-                                        </div>
-                                        <div class="vert_slider" id="s_attack_div">
+                                            <input type="range" id="defense" class="stats_slider round" orient="vertical" max="31" min="0" value="15">
+                                        </div><div class="vert_slider" id="s_attack_div">
                                             <div class="statHeader" id="s_attack_header"><p>Sp.Atk IV</p></div>
-                                            <input type="range" id="s_attack" class="stats_slider round" max="31" min="0" value="15">
-                                        </div>
-                                        <div class="vert_slider" id="s_defense_div">
+                                            <input type="range" id="s_attack" class="stats_slider round" orient="vertical" max="31" min="0" value="15">
+                                        </div><div class="vert_slider" id="s_defense_div">
                                             <div class="statHeader" id="s_defense_header"><p>Sp.Def IV</p></div>
-                                            <input type="range" id="s_defense" class="stats_slider round" max="31" min="0" value="15">
-                                        </div>
-                                        <div class="vert_slider" id="speed_div">
+                                            <input type="range" id="s_defense" class="stats_slider round" orient="vertical" max="31" min="0" value="15">
+                                        </div><div class="vert_slider" id="speed_div">
                                             <div class="statHeader" id="speed_header"><p>Speed IV</p></div>
-                                            <input type="range" id="speed" class="stats_slider round" max="31" min="0" value="15">
+                                            <input type="range" id="speed" class="stats_slider round" orient="vertical" max="31" min="0" value="15">
                                         </div>
                                     </div>
                                 </div>
