Case sensitivity changes

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
                     <p class="textHeader">Region:</p>
                     <select id="select_Region">
                         <option selected disabled>Select Region</option>
-                        <option name="kanto">Kanto</option>
-                        <option name="johto">Johto</option>
-                        <option name="hoenn">Hoenn</option>
-                        <option name="sinnoh">Sinnoh</option>
-                        <option name="unova">Unova</option>
-                        <option name="kalos">Kalos</option>
+                        <option value="kanto">Kanto</option>
+                        <option value="johto">Johto</option>
+                        <option value="hoenn">Hoenn</option>
+                        <option value="sinnoh">Sinnoh</option>
+                        <option value="unova">Unova</option>
+                        <option value="kalos">Kalos</option>
                     </select>
                 </div>
                 <div id="alignMapCenter">
