Chord chart removed and network diagram style visual added

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                     </div>
                     <div id="secondary_div">
                         <div id="cord_div">
+                            <p id ="typesTitle">Type Comparison</p>
                             <div id="chord">
 
                             </div>
