--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/css?family=Exo+2:400,600" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="main.css">
     <meta charset="UTF-8">
-    <title>SVG to ZingChart</title>
+    <title>Interactive Pokémon Map and Pokédex</title>
     <script src="https://demos-stage.zingchart.com/zingchart/zingchart.min.js"></script>
     <script src="https://demos-stage.zingchart.com/zingchart/modules/zingchart-chord.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.2.1/firebase.js"></script>
@@ -18,7 +18,6 @@
         };
         firebase.initializeApp(config);
     </script>
-
 </head>
 <body>
     <script src="bezier.js"></script>
