--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </script>
 </head>
 <body>
-<script src="bezier.js"></script>
+<!--<script src="bezier.js"></script>-->
 <div id="TOP">
     <div class="alignMiddle">
         <div id="MAP" class="topVisualizations">
