--- a/index.html
+++ b/index.html
@@ -18,14 +18,29 @@
         };
         firebase.initializeApp(config);
     </script>
+    <!-- Piwik -->
+    <script type="text/javascript">
+        var _paq = _paq || [];
+        _paq.push(["setDomains", ["*.examples.zingchart.com/pokemap"]]);
+        _paq.push(['trackPageView']);
+        _paq.push(['enableLinkTracking']);
+        (function() {
+            var u="//tracking.zingchart.com/piwik/";
+            _paq.push(['setTrackerUrl', u+'piwik.php']);
+            _paq.push(['setSiteId', '10']);
+            var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+            g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+        })();
+    </script>
+    <noscript><p><img src="//tracking.zingchart.com/piwik/piwik.php?idsite=10" style="border:0;" alt="" /></p></noscript>
+    <!-- End Piwik Code -->
 </head>
 <body>
-<!--<script src="bezier.js"></script>-->
-<div id="TOP">
-    <div class="alignMiddle">
+<script src="bezier.js"></script>
+<div id="page_flex">
+    <div id="TOP">
         <div id="MAP" class="topVisualizations">
             <div id="selectDataVisualizationPreferencesHeader">
-                <!--<div class="number"></div>-->
                 <p class="textHeader">Region:</p>
                 <select id="select_Region">
                     <option selected disabled>Select Region</option>
@@ -37,17 +52,15 @@
                     <option value="kalos">Kalos</option>
                 </select>
             </div>
-            <div id="alignMapCenter">
-                <div id="wrapMap">
-                    <div id="wrapper">
-                        <div id="SHAPESDIV">
-                        </div>
+            <div id="wrapMap">
+                <div id="wrapper">
+                    <div id="SHAPESDIV">
                     </div>
                 </div>
             </div>
             <div id="selectDataVisualizationPreferences">
-                <div id = "innerselectDataVisualizationPreferences">
-                    <div id ="chartForm">
+                <div id="innerselectDataVisualizationPreferences">
+                    <div id="chartForm">
                         <p class="largerLabel">Location Area: </p>
                         <select id="select_Location_Area" disabled>
                             <option selected disabled>Select Area</option>
@@ -69,28 +82,28 @@
             </div>
         </div>
     </div>
-</div>
-<object id ="loading" data="UI_images/spin.svg" type="image/svg+xml"> </object>
-<div id="FOOTER">
-    <div class="alignMiddle">
+    <div id="INDIVIDUAL">
         <div id="bottomElts">
             <div id="center_pokemon_image">
-                <div id = "encloseImage">
+                <div id="encloseImage">
 
                     <div id="pokemon_header">
                         <div id="pokemon_header_types"></div>
                     </div>
-                    <img id="pokemon_image" src="UI_images/holder.png" />
+                    <div id="pokemon_image_div">
+                        <img id="pokemon_image" src="UI_images/holder.png"/>
+                    </div>
                 </div>
-                <div id="cord_div">
-                    <p id ="typesTitle">Type Comparison</p>
+                <div id="typesDiv">
+                    <p id="typesTitle">Type Comparison:</p>
                     <div id="wrapType">
                         <div id="wrapperType">
-                            <div id="chord">
+                            <div id="typesZing">
 
                             </div>
                         </div>
                     </div>
+                    <p id="typesText">Left this pokemon defends, right this pokemon attacks with it's type.</p>
                 </div>
                 <div id="stats_div">
                     <div id="stats_zing">
@@ -110,62 +123,75 @@
                     </div>
 
                     <div id="progression">
-                        <div id="adjustIV_div">
-                            <div id="clip_stats">
-                                <div id="nature_div">
-                                    <div id="nature_header"><p>Nature:</p></div>
-                                    <select id="nature" size="22" >
-                                        <option selected value="[null,null]">Hardy</option>
-                                        <option value="2,3">Lonely</option>
-                                        <option value="2,6">Brave</option>
-                                        <option value="2,4">Adamant</option>
-                                        <option value="2,5">Naughty</option>
-                                        <option value="3,2">Bold</option>
-                                        <option value="null,null">Docile</option>
-                                        <option value="3,6">Relaxed</option>
-                                        <option value="3,4">Impish</option>
-                                        <option value="3,5">Lax</option>
-                                        <option value="6,2">Timid</option>
-                                        <option value="6,3">Hasty</option>
-                                        <option value="null,null">Serious</option>
-                                        <option value="6,4">Jolly</option>
-                                        <option value="6,5">Naive</option>
-                                        <option value="4,2">Modest</option>
-                                        <option value="4,3">Mild</option>
-                                        <option value="4,6">Quiet</option>
-                                        <option value="null,null">Bashful</option>
-                                        <option value="4,5">Rash</option>
-                                        <option value="5,2">Calm</option>
-                                        <option value="5,3">Gentle</option>
-                                        <option value="5,6">Sassy</option>
-                                        <option value="5,4">Careful</option>
-                                        <option value="null,null">Quirky</option>
-                                    </select>
-                                </div><div class="vert_slider" id="HP_div">
-                                <div class="statHeader" id="HP_header"><p>HP IV</p></div>
-                                <input type="range" id="HP" class="stats_slider round" orient="vertical" max="31" min="0" value="15">
-                            </div><div class="vert_slider" id="attack_div" >
-                                <div class="statHeader" id="attack_header"><p>Atk IV</p></div>
-                                <input type="range" id="attack" class="stats_slider round" orient="vertical" max="31" min="0" value="15">
-                            </div><div class="vert_slider" id="defense_div">
-                                <div class="statHeader" id="defense_header"><p>Def IV</p></div>
-                                <input type="range" id="defense" class="stats_slider round" orient="vertical" max="31" min="0" value="15">
-                            </div><div class="vert_slider" id="s_attack_div">
-                                <div class="statHeader" id="s_attack_header"><p>Sp.Atk IV</p></div>
-                                <input type="range" id="s_attack" class="stats_slider round" orient="vertical" max="31" min="0" value="15">
-                            </div><div class="vert_slider" id="s_defense_div">
-                                <div class="statHeader" id="s_defense_header"><p>Sp.Def IV</p></div>
-                                <input type="range" id="s_defense" class="stats_slider round" orient="vertical" max="31" min="0" value="15">
-                            </div><div class="vert_slider" id="speed_div">
-                                <div class="statHeader" id="speed_header"><p>Speed IV</p></div>
-                                <input type="range" id="speed" class="stats_slider round" orient="vertical" max="31" min="0" value="15">
+                        <div id="clip_stats">
+                            <div id="nature_div">
+                                <div id="nature_header"><p>Nature:</p></div>
+                                <select id="nature" size="22">
+                                    <option selected value="[null,null]">Hardy</option>
+                                    <option value="2,3">Lonely</option>
+                                    <option value="2,6">Brave</option>
+                                    <option value="2,4">Adamant</option>
+                                    <option value="2,5">Naughty</option>
+                                    <option value="3,2">Bold</option>
+                                    <option value="null,null">Docile</option>
+                                    <option value="3,6">Relaxed</option>
+                                    <option value="3,4">Impish</option>
+                                    <option value="3,5">Lax</option>
+                                    <option value="6,2">Timid</option>
+                                    <option value="6,3">Hasty</option>
+                                    <option value="null,null">Serious</option>
+                                    <option value="6,4">Jolly</option>
+                                    <option value="6,5">Naive</option>
+                                    <option value="4,2">Modest</option>
+                                    <option value="4,3">Mild</option>
+                                    <option value="4,6">Quiet</option>
+                                    <option value="null,null">Bashful</option>
+                                    <option value="4,5">Rash</option>
+                                    <option value="5,2">Calm</option>
+                                    <option value="5,3">Gentle</option>
+                                    <option value="5,6">Sassy</option>
+                                    <option value="5,4">Careful</option>
+                                    <option value="null,null">Quirky</option>
+                                </select>
                             </div>
+                            <div class="vert_slider" id="HP_div">
+                                <div class="statHeader" id="HP_header"><p>HP IV</p></div>
+                                <input type="range" id="HP" class="stats_slider round" orient="vertical" max="31"
+                                       min="0" value="15">
+                            </div>
+                            <div class="vert_slider" id="attack_div">
+                                <div class="statHeader" id="attack_header"><p>Atk IV</p></div>
+                                <input type="range" id="attack" class="stats_slider round" orient="vertical"
+                                       max="31" min="0" value="15">
+                            </div>
+                            <div class="vert_slider" id="defense_div">
+                                <div class="statHeader" id="defense_header"><p>Def IV</p></div>
+                                <input type="range" id="defense" class="stats_slider round" orient="vertical"
+                                       max="31" min="0" value="15">
+                            </div>
+                            <div class="vert_slider" id="s_attack_div">
+                                <div class="statHeader" id="s_attack_header"><p>Sp.Atk IV</p></div>
+                                <input type="range" id="s_attack" class="stats_slider round" orient="vertical"
+                                       max="31" min="0" value="15">
+                            </div>
+                            <div class="vert_slider" id="s_defense_div">
+                                <div class="statHeader" id="s_defense_header"><p>Sp.Def IV</p></div>
+                                <input type="range" id="s_defense" class="stats_slider round" orient="vertical"
+                                       max="31" min="0" value="15">
+                            </div>
+                            <div class="vert_slider" id="speed_div">
+                                <div class="statHeader" id="speed_header"><p>Speed IV</p></div>
+                                <input type="range" id="speed" class="stats_slider round" orient="vertical" max="31"
+                                       min="0" value="15">
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+    <div id="info">
+        <p>This project was built using <a href="https://www.zingchart.com/">ZingChart</a> <br> To contribute to this project or give feedback please visit our <a href="https://github.com/tessahelenmartin/svg-to-zingchart">Github repository</a>.</p>
     </div>
 </div>
 <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
