--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             </div>
                         </div>
                     </div>
-                    <p id="typesText">Left this pokemon defends, right this pokemon attacks with it's type.</p>
+                    <p id="typesText">Left- this pokemon defends, right- this pokemon attacks with a move of it's type(s).</p>
                 </div>
                 <div id="stats_div">
                     <div id="stats_zing">
