--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
         </div>
     </div>
     <div id="info">
-        <p>This project was built using <a href="https://www.zingchart.com/">ZingChart</a> <br> To contribute to this project or give feedback please visit our <a href="https://github.com/zingchart-demos/Pokemap-ZingChart">Github repository</a>.</p>
+        <p>This interactive Pokémon map and Pokédex was built using <a href="https://www.zingchart.com/">ZingChart</a>. To use, select a pokemon region, then click a location on the map. Select an area, a method of encounter and a game version to see the Pokémon in this area. To get stats on a specific pokemon, click any on any Pokémon in the chart's legend.</p>
+        <p id="contribute">To contribute to this project or give feedback please visit our <a href="https://github.com/zingchart-demos/Pokemap-ZingChart">Github repository</a>.</p>
     </div>
 </div>
 <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
