--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link href="https://fonts.googleapis.com/css?family=Exo+2:400,600" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="main_min.css">
     <meta charset="UTF-8">
     <title>Interactive Pokémon Map and Pokédex</title>
     <script src="https://cdn.zingchart.com/zingchart.min.js"></script>
