--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/css?family=Exo+2:400,600" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="main_min.css">
     <meta charset="UTF-8">
-    <title>Interactive Pokémon Map and Pokédex</title>
+    <title>ZingChart Pokémap and Pokédex</title>
     <script src="https://cdn.zingchart.com/zingchart.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.2.1/firebase.js"></script>
     <script>
@@ -33,6 +33,20 @@
     </script>
     <noscript><p><img src="//tracking.zingchart.com/piwik/piwik.php?idsite=10" style="border:0;" alt="" /></p></noscript>
     <!-- End Piwik Code -->
+        <meta property="og:site_name" content="ZingChart Pokémap and Pokédex">
+        <meta property="og:title" content="ZingChart Pokémap and Pokédex - An Interactive Pokémon tool">
+        <meta property="og:description" content="ZingChart's Pokémap and Pokédex webapp gives Pokémon trainers everywhere a way to visualize the Pokémon world and it's inhabitants.">
+        <meta property="og:url" content="https://examples.zingchart.com/pokemap/">
+        <meta property="og:image" content="https://examples.zingchart.com/pokemap/UI_images/twittercard.png">
+
+        <meta name="description" content="An integrated Pokédex and map of the Pokémon world providing route/method-based encounter statistics as well as statistics such as type effectiveness and stats projection for individual Pokémon.">
+        <meta name="author" content="ZingChart Inc. [ www.zingchart.com ]">
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@ZingChart">
+        <meta name="twitter:creator" content="@ZingChart">
+        <meta name="twitter:title" content="ZingChart Pokémap and Pokédex - An Interactive Pokémon too">
+        <meta name="twitter:image" content="https://examples.zingchart.com/pokemap/UI_images/twittercard.png">
+        <meta name="twitter:description" content="ZingChart's Pokémap and Pokédex is an interactive Pokémon tool to help you build your best team. It provides route/method-based encounter statistics, type charts for any selected Pokémon, and customizable stats projections based on IVs, EVs and Nature.">
 </head>
 <body>
 <script src="bezier.js"></script>
