--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link href="https://fonts.googleapis.com/css?family=Exo+2:400,600" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="main_min.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
     <meta charset="UTF-8">
     <title>ZingChart Pokémap and Pokédex</title>
     <script src="https://cdn.zingchart.com/zingchart.min.js"></script>
@@ -51,26 +51,29 @@
 <body>
 <script src="bezier.js"></script>
 <div id="page_flex">
-    <div id="TOP">
-        <div id="MAP" class="topVisualizations">
+    <div id="HEADER">
+        <p id="HEADER_text">ZingChart Pokémap and Pokédex
             <div id="selectDataVisualizationPreferencesHeader">
-                <p class="textHeader">Region:</p>
-                <select id="select_Region">
-                    <option selected disabled>Select Region</option>
-                    <option value="kanto">Kanto</option>
-                    <option value="johto">Johto</option>
-                    <option value="hoenn">Hoenn</option>
-                    <option value="sinnoh">Sinnoh</option>
-                    <option value="unova">Unova</option>
-                    <option value="kalos">Kalos</option>
-                </select>
-            </div>
+        <p class="textHeader">Region:</p>
+        <select id="select_Region">
+            <option selected disabled>Select Region</option>
+            <option value="kanto">Kanto</option>
+            <option value="johto">Johto</option>
+            <option value="hoenn">Hoenn</option>
+            <option value="sinnoh">Sinnoh</option>
+            <option value="unova">Unova</option>
+            <option value="kalos">Kalos</option>
+        </select>
+    </div></p>
+    </div>
+    <div id="REGION_PAGE">
+        <div id="MAP" class="topVisualizations">
+
             <div id="wrapMap">
                 <div id="wrapper">
                     <div id="SHAPESDIV">
                     </div>
                 </div>
-            </div>
             <div id="selectDataVisualizationPreferences">
                 <div id="innerselectDataVisualizationPreferences">
                     <div id="chartForm">
@@ -90,12 +93,12 @@
                 </div>
             </div>
         </div>
-        <div id="CHART" class="topVisualizations">
-            <div id="CHARTDIV">
-            </div>
-        </div>
+        <!--<div id="CHART" class="topVisualizations">-->
+            <!--<div id="CHARTDIV">-->
+            <!--</div>-->
+        <!--</div>-->
     </div>
-    <div id="INDIVIDUAL">
+    <div id="POKEMON_PAGE">
         <div id="bottomElts">
             <div id="encloseImage">
 
@@ -193,7 +196,7 @@
         </div>
     </div>
     <div id="info">
-        <p>This interactive Pokémon map and Pokédex was built using <a href="https://www.zingchart.com/">ZingChart</a>. To use, select a pokemon region, then click a location on the map. Select an area, a method of encounter and a game version to see the Pokémon in this area. To get stats on a specific pokemon, click any on any Pokémon in the chart's legend.</p>
+        <!--<p>This interactive Pokémon map and Pokédex was built using <a href="https://www.zingchart.com/">ZingChart</a>. To use, select a pokemon region, then click a location on the map. Select an area, a method of encounter and a game version to see the Pokémon in this area. To get stats on a specific pokemon, click any on any Pokémon in the chart's legend.</p>-->
         <p id="contribute">To contribute to this project or give feedback please visit our <a href="https://github.com/zingchart-demos/Pokemap-ZingChart">Github repository</a>.</p>
     </div>
 </div>
