--- a/index.html
+++ b/index.html
@@ -52,46 +52,54 @@
 <script src="bezier.js"></script>
 <div id="page_flex">
     <div id="HEADER">
-        <p id="HEADER_text">ZingChart Pokémap and Pokédex
+        <p id="HEADER_text">ZingChart Pokémap</p>
+        <div id="region_div">
+            <a href="#"><div class='triangle back' id="back_region"></div></a>
+            <p class="HEADER_subtext" id="subtext_region">Kalos</p>
+            <a href="#"><div class='triangle next' id="next_region"></div></a>
+        </div>
+        <div id="version_div">
+            <a href="#"><div class='triangle back' id="back_version"></div></a>
+            <p class="HEADER_subtext" id="subtext_version">first</p>
+            <a href="#"><div class='triangle next' id="next_version"></div></a>
+        </div>
+        <div id="area_div">
+            <a href="#"><div class='triangle back' id="back_area"></div></a>
+            <p class="HEADER_subtext" id="subtext_area">first</p>
+            <a href="#"><div class='triangle next' id="next_area"></div></a>
+        </div>
+        <div id="method_div">
+            <a href="#"><div class='triangle back' id="back_method"></div></a>
+            <p class="HEADER_subtext" id="subtext_method">first</p>
+            <a href="#"><div class='triangle next' id="next_method"></div></a>
+        </div>
             <div id="selectDataVisualizationPreferencesHeader">
-        <p class="textHeader">Region:</p>
-        <select id="select_Region">
-            <option selected disabled>Select Region</option>
-            <option value="kanto">Kanto</option>
-            <option value="johto">Johto</option>
-            <option value="hoenn">Hoenn</option>
-            <option value="sinnoh">Sinnoh</option>
-            <option value="unova">Unova</option>
-            <option value="kalos">Kalos</option>
-        </select>
-    </div></p>
+        <div id="selectDataVisualizationPreferences">
+            <div id="innerselectDataVisualizationPreferences">
+                <div id="chartForm">
+                    <p class="largerLabel">Location Area: </p>
+                    <select id="select_Location_Area" disabled>
+                        <option selected disabled>Select Area</option>
+                    </select><br>
+                    <p class="largerLabel">Method: </p>
+                    <select id="select_Method" disabled>
+                        <option selected disabled>Select Method</option>
+                    </select><br>
+                    <p class="largerLabel">Version: </p>
+                    <select id="select_Version" disabled>
+                        <option selected disabled>Select Version</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+    </div>
+    </p>
     </div>
     <div id="REGION_PAGE">
         <div id="MAP" class="topVisualizations">
-
-            <div id="wrapMap">
-                <div id="wrapper">
-                    <div id="SHAPESDIV">
-                    </div>
-                </div>
-            <div id="selectDataVisualizationPreferences">
-                <div id="innerselectDataVisualizationPreferences">
-                    <div id="chartForm">
-                        <p class="largerLabel">Location Area: </p>
-                        <select id="select_Location_Area" disabled>
-                            <option selected disabled>Select Area</option>
-                        </select><br>
-                        <p class="largerLabel">Method: </p>
-                        <select id="select_Method" disabled>
-                            <option selected disabled>Select Method</option>
-                        </select><br>
-                        <p class="largerLabel">Version: </p>
-                        <select id="select_Version" disabled>
-                            <option selected disabled>Select Version</option>
-                        </select>
-                    </div>
-                </div>
+            <div id="SHAPESDIV">
             </div>
+
         </div>
         <!--<div id="CHART" class="topVisualizations">-->
             <!--<div id="CHARTDIV">-->
